tests/parse/fail/illegal-68.dcf
void main() {
  int x;
  x = true ? (1 : 2);
}